<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNoteActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="21dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_content"
            android:textSize="@dimen/_12ssp"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/textInputContent"
        app:layout_constraintStart_toStartOf="@+id/textInputContent"
        app:layout_constraintTop_toBottomOf="@+id/textInputContent" />

    <Button
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/textInputContent"
        app:layout_constraintStart_toStartOf="@+id/textInputContent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image" />


</androidx.constraintlayout.widget.ConstraintLayout>